# docs/swagger.yaml
@@ -232,6 +232,15 @@ definitions:
         example: 12345678TH
         type: string
     type: object
+  request.Login:
+    properties:
+      password:
+        example: string
+        type: string
+      userName:
+        example: DC53002
+        type: string
+    type: object
   request.LoginLark:
     properties:
       userID:
@@ -983,4 +992,41 @@ paths:
       summary: Update Order
       tags:
       - ReturnOrder
+  /test/login:
+    post:
+      consumes:
+      - application/json
+      description: Handles user login requests and generates a token for the authenticated
+        user.
+      operationId: usertest-login
+      parameters:
+      - description: User login credentials in JSON format
+        in: body
+        name: login-request
+        required: true
+        schema:
+          $ref: '#/definitions/request.Login'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: JWT token
+          schema:
+            allOf:
+            - $ref: '#/definitions/api.Response'
+            - properties:
+                result:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Response'
+      summary: User Login
+      tags:
+      - LoginTest
 swagger: "2.0"
