# dto/response/response.go
@@ -12,6 +12,14 @@ type Login struct {
 	Platfrom   string `json:"platfrom" db:"Platfrom" example:"test1234"`
 }
 
+type UserInform struct {
+	UserID     string `json:"userID,omitempty" db:"UserID" example:"DC64205"`
+	UserName   string `json:"userName,omitempty" db:"Username" example:"aunlaphat.art"`
+	NickName   string `json:"nickName,omitempty" db:"NickName" example:"fa"`
+	FullNameTH string `json:"fullNameTH,omitempty" db:"FullNameTH" example:"อัญญ์ลภัส อาจสุริยงค์"`
+	DepartmentNo string `json:"department,omitempty" db:"DepartmentNo" example:"G01"`
+}
+
 type OrderResponse struct {
 	OrderNo         string     `json:"orderNo" db:"OrderNo" example:"OD0001"`
 	BrandName       *string    `json:"brandName" db:"BrandName" example:"BEWELL"`
